mdapipkg/objects/Destination__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <formula>Owner:User.Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Country__c</fullName>
        <label>Destination Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName> Afghanistan</fullName>
                </value>
                <value>
                    <fullName> Åland Islands</fullName>
                </value>
                <value>
                    <fullName> Albania</fullName>
                </value>
                <value>
                    <fullName> Algeria</fullName>
                </value>
                <value>
                    <fullName> American Samoa</fullName>
                </value>
                <value>
                    <fullName> Andorra</fullName>
                </value>
                <value>
                    <fullName> Angola</fullName>
                </value>
                <value>
                    <fullName> Anguilla</fullName>
                </value>
                <value>
                    <fullName> Antarctica</fullName>
                </value>
                <value>
                    <fullName> Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName> Argentina</fullName>
                </value>
                <value>
                    <fullName> Armenia</fullName>
                </value>
                <value>
                    <fullName> Aruba</fullName>
                </value>
                <value>
                    <fullName> Australia</fullName>
                </value>
                <value>
                    <fullName> Austria</fullName>
                </value>
                <value>
                    <fullName> Azerbaijan</fullName>
                </value>
                <value>
                    <fullName> Bahamas</fullName>
                </value>
                <value>
                    <fullName> Bahrain</fullName>
                </value>
                <value>
                    <fullName> Bangladesh</fullName>
                </value>
                <value>
                    <fullName> Barbados</fullName>
                </value>
                <value>
                    <fullName> Belarus</fullName>
                </value>
                <value>
                    <fullName> Belgium</fullName>
                </value>
                <value>
                    <fullName> Belize</fullName>
                </value>
                <value>
                    <fullName> Benin</fullName>
                </value>
                <value>
                    <fullName> Bermuda</fullName>
                </value>
                <value>
                    <fullName> Bhutan</fullName>
                </value>
                <value>
                    <fullName> Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName> Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName> Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName> Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_of_Discharge__c</fullName>
        <label>Receiving Port / Port of Discharge (POD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Factory</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Destination</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Destination_Country__c</columns>
        <columns>Port_of_Discharge__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MY_DESTINATIONS</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>MY DESTINATIONS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Destination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Destinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>